tests/assets/macro-data/fail_if_attribute_args_include_self.stderr
error: `self` argument not allowed in handler function.
 --> test_data/fail_self.rs:4:1
  |
4 | / #[indexer(
5 | |     abi = "./test_data/contracts-abi.json",
6 | |     namespace = "test_namespace",
7 | |     identifier = "bar",
8 | |     schema = "./test_data/schema.graphql",
9 | | )]
  | |__^
  |
  = note: this error originates in the attribute macro `indexer` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
  --> test_data/fail_self.rs:17:2
   |
17 | }
   |  ^ consider adding a `main` function to `$DIR/test_data/fail_self.rs`
